Fix Bugs in API